entityLock, version, redis cache added